--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1414,12 +1414,6 @@ video {
 .left-\[-15px\] {
   left: -15px;
 }
-.top-\[126px\] {
-  top: 126px;
-}
-.right-\[10px\] {
-  right: 10px;
-}
 .top-\[-15px\] {
   top: -15px;
 }
@@ -2160,8 +2154,8 @@ video {
 .ml-0 {
   margin-left: 0px;
 }
-.mt-7 {
-  margin-top: 1.75rem;
+.mt-9 {
+  margin-top: 2.25rem;
 }
 .mt-\[\.5rem\] {
   margin-top: .5rem;
@@ -2277,9 +2271,6 @@ video {
 .mb-28 {
   margin-bottom: 7rem;
 }
-.mt-9 {
-  margin-top: 2.25rem;
-}
 .mr-0 {
   margin-right: 0px;
 }
@@ -2291,6 +2282,9 @@ video {
 }
 .ml-11 {
   margin-left: 2.75rem;
+}
+.mt-7 {
+  margin-top: 1.75rem;
 }
 .mt-1 {
   margin-top: 0.25rem;
@@ -2350,9 +2344,6 @@ video {
 }
 .h-\[30px\] {
   height: 30px;
-}
-.h-\[80px\] {
-  height: 80px;
 }
 .h-\[42px\] {
   height: 42px;
@@ -2516,12 +2507,6 @@ video {
 }
 .w-\[95px\] {
   width: 95px;
-}
-.w-\[167px\] {
-  width: 167px;
-}
-.w-\[80px\] {
-  width: 80px;
 }
 .w-\[20px\] {
   width: 20px;
@@ -2748,8 +2733,8 @@ video {
 .max-w-\[18px\] {
   max-width: 18px;
 }
-.max-w-\[15px\] {
-  max-width: 15px;
+.max-w-\[17px\] {
+  max-width: 17px;
 }
 .max-w-\[14px\] {
   max-width: 14px;
@@ -2943,6 +2928,9 @@ video {
 .max-w-\[850px\] {
   max-width: 850px;
 }
+.max-w-\[15px\] {
+  max-width: 15px;
+}
 .max-w-\[16px\] {
   max-width: 16px;
 }
@@ -2966,9 +2954,6 @@ video {
 }
 .max-w-\[220px\] {
   max-width: 220px;
-}
-.max-w-\[17px\] {
-  max-width: 17px;
 }
 .flex-1 {
   -webkit-box-flex: 1;
@@ -3908,9 +3893,6 @@ video {
 .border-\[1px\] {
   border-width: 1px;
 }
-.border-\[3px\] {
-  border-width: 3px;
-}
 .border-b {
   border-bottom-width: 1px;
 }
@@ -3929,6 +3911,12 @@ video {
 .border-grey-600 {
   --tw-border-opacity: 1;
   border-color: rgb(77 85 97 / var(--tw-border-opacity));
+}
+.border-emerald-700 {
+  border-color: var(--emerald-700);
+}
+.border-sage-50 {
+  border-color: var(--sage-50);
 }
 .border-transparent {
   border-color: transparent;
@@ -3976,29 +3964,11 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
-.border-emerald-500 {
-  border-color: var(--emerald-500);
-}
-.border-emerald-400 {
-  border-color: var(--emerald-400);
-}
 .border-sage-300 {
   border-color: var(--sage-300);
 }
-.\!border-tangerine-400 {
-  border-color: var(--tangerine-400) !important;
-}
 .\!border-tangerine-100 {
   border-color: var(--tangerine-100) !important;
-}
-.border-sage-700 {
-  border-color: var(--sage-700);
-}
-.border-emerald-700 {
-  border-color: var(--emerald-700);
-}
-.border-sage-50 {
-  border-color: var(--sage-50);
 }
 .bg-primary-100 {
   --tw-bg-opacity: 1;
@@ -4034,9 +4004,6 @@ video {
 .bg-sage-100 {
   background-color: var(--sage-100);
 }
-.bg-sage-500 {
-  background-color: var(--sage-500);
-}
 .bg-\[\#E60023\] {
   --tw-bg-opacity: 1;
   background-color: rgb(230 0 35 / var(--tw-bg-opacity));
@@ -4045,11 +4012,14 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(239 236 238 / var(--tw-bg-opacity));
 }
-.bg-emerald-500 {
-  background-color: var(--emerald-500);
-}
 .bg-emerald-700 {
   background-color: var(--emerald-700);
+}
+.bg-sage-50 {
+  background-color: var(--sage-50);
+}
+.bg-emerald-500 {
+  background-color: var(--emerald-500);
 }
 .bg-tangerine-200 {
   background-color: var(--tangerine-200);
@@ -4078,9 +4048,6 @@ video {
 }
 .bg-sage-200 {
   background-color: var(--sage-200);
-}
-.bg-sage-50 {
-  background-color: var(--sage-50);
 }
 .bg-emerald-900 {
   background-color: var(--emerald-900);
@@ -4114,6 +4081,9 @@ video {
 .bg-slate-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+.bg-sage-500 {
+  background-color: var(--sage-500);
 }
 .bg-sage-400 {
   background-color: var(--sage-400);
@@ -4226,8 +4196,8 @@ video {
 .bg-sage-300 {
   background-color: var(--sage-300);
 }
-.\!bg-tangerine-400 {
-  background-color: var(--tangerine-400) !important;
+.\!bg-tangerine-100 {
+  background-color: var(--tangerine-100) !important;
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -4264,9 +4234,6 @@ video {
 .bg-success-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(79 113 113 / var(--tw-bg-opacity));
-}
-.\!bg-tangerine-100 {
-  background-color: var(--tangerine-100) !important;
 }
 .bg-contain {
   background-size: contain;
@@ -4495,9 +4462,6 @@ video {
 .pt-\[var\(--nav-top-sm\)\] {
   padding-top: var(--nav-top-sm);
 }
-.pb-\[92\%\] {
-  padding-bottom: 92%;
-}
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -4515,6 +4479,9 @@ video {
 }
 .pr-\[12\%\] {
   padding-right: 12%;
+}
+.pb-\[92\%\] {
+  padding-bottom: 92%;
 }
 .pb-\[48\.25\%\] {
   padding-bottom: 48.25%;
@@ -4844,15 +4811,14 @@ video {
   --tw-text-opacity: 1;
   color: rgb(255 85 31 / var(--tw-text-opacity));
 }
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+.text-emerald-700 {
+  color: var(--emerald-700);
 }
-.text-sage-700 {
-  color: var(--sage-700);
+.text-emerald-800 {
+  color: var(--emerald-800);
 }
-.text-sage-600 {
-  color: var(--sage-600);
+.text-tangerine-700 {
+  color: var(--tangerine-700);
 }
 .text-grey-500 {
   --tw-text-opacity: 1;
@@ -4862,18 +4828,22 @@ video {
   --tw-text-opacity: 1;
   color: rgb(33 40 55 / var(--tw-text-opacity));
 }
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .text-neutral-800 {
   --tw-text-opacity: 1;
   color: rgb(62 53 58 / var(--tw-text-opacity));
+}
+.text-emerald-600 {
+  color: var(--emerald-600);
 }
 .text-emerald-400 {
   color: var(--emerald-400);
 }
 .text-emerald-500 {
   color: var(--emerald-500);
-}
-.text-tangerine-700 {
-  color: var(--tangerine-700);
 }
 .text-success-700 {
   --tw-text-opacity: 1;
@@ -4890,6 +4860,12 @@ video {
 .text-slate-600 {
   --tw-text-opacity: 1;
   color: rgb(71 85 105 / var(--tw-text-opacity));
+}
+.text-sage-600 {
+  color: var(--sage-600);
+}
+.text-sage-700 {
+  color: var(--sage-700);
 }
 .text-error-500 {
   --tw-text-opacity: 1;
@@ -4948,9 +4924,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(51 63 79 / var(--tw-text-opacity));
 }
-.text-emerald-800 {
-  color: var(--emerald-800);
-}
 .text-charcoal-900 {
   --tw-text-opacity: 1;
   color: rgb(30 30 33 / var(--tw-text-opacity));
@@ -4967,15 +4940,9 @@ video {
   --tw-text-opacity: 1;
   color: rgb(192 72 40 / var(--tw-text-opacity));
 }
-.text-emerald-600 {
-  color: var(--emerald-600);
-}
 .text-primary-500 {
   --tw-text-opacity: 1;
   color: rgb(141 92 92 / var(--tw-text-opacity));
-}
-.text-emerald-700 {
-  color: var(--emerald-700);
 }
 .text-\[\#7a4b0e\] {
   --tw-text-opacity: 1;
@@ -5072,6 +5039,9 @@ video {
 .text-primary-800 {
   --tw-text-opacity: 1;
   color: rgb(60 38 38 / var(--tw-text-opacity));
+}
+.text-tangerine-800 {
+  color: var(--tangerine-800);
 }
 .text-opacity-70 {
   --tw-text-opacity: 0.7;
@@ -5747,15 +5717,6 @@ video {
   --tw-content: '';
   content: var(--tw-content);
 }
-.after\:\!bg-sage-700::after {
-  content: var(--tw-content);
-  background-color: var(--sage-700) !important;
-}
-.after\:\!bg-grey-700::after {
-  content: var(--tw-content);
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(56 64 80 / var(--tw-bg-opacity)) !important;
-}
 .after\:\!bg-emerald-700::after {
   content: var(--tw-content);
   background-color: var(--emerald-700) !important;
@@ -5881,23 +5842,17 @@ video {
 .hover\:border-emerald-500:hover {
   border-color: var(--emerald-500);
 }
+.hover\:border-emerald-700:hover {
+  border-color: var(--emerald-700);
+}
 .hover\:border-sage-500:hover {
   border-color: var(--sage-500);
 }
 .hover\:border-sage-200:hover {
   border-color: var(--sage-200);
 }
-.hover\:\!border-tangerine-400:hover {
-  border-color: var(--tangerine-400) !important;
-}
 .hover\:\!border-tangerine-100:hover {
   border-color: var(--tangerine-100) !important;
-}
-.hover\:border-emerald-400:hover {
-  border-color: var(--emerald-400);
-}
-.hover\:border-emerald-700:hover {
-  border-color: var(--emerald-700);
 }
 .hover\:bg-emerald-500:hover {
   background-color: var(--emerald-500);
@@ -5933,8 +5888,8 @@ video {
 .hover\:bg-sage-300:hover {
   background-color: var(--sage-300);
 }
-.hover\:\!bg-tangerine-400:hover {
-  background-color: var(--tangerine-400) !important;
+.hover\:\!bg-tangerine-100:hover {
+  background-color: var(--tangerine-100) !important;
 }
 .hover\:bg-secondary-400:hover {
   --tw-bg-opacity: 1;
@@ -5969,9 +5924,6 @@ video {
 }
 .hover\:bg-sage-700:hover {
   background-color: var(--sage-700);
-}
-.hover\:\!bg-tangerine-100:hover {
-  background-color: var(--tangerine-100) !important;
 }
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
@@ -6450,13 +6402,15 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(221 226 236 / var(--tw-bg-opacity));
 }
-.group:hover .group-hover\:bg-primary-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(240 214 199 / var(--tw-bg-opacity));
+.group:hover .group-hover\:bg-tangerine-300 {
+  background-color: var(--tangerine-300);
 }
 .group:hover .group-hover\:bg-success-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(217 229 229 / var(--tw-bg-opacity));
+}
+.group:hover .group-hover\:fill-tangerine-50 {
+  fill: var(--tangerine-50);
 }
 .group:hover .group-hover\:fill-sage-700 {
   fill: var(--sage-700);
@@ -6513,9 +6467,6 @@ video {
   }
   .tablet\:\!top-\[-63px\] {
     top: -63px !important;
-  }
-  .tablet\:top-auto {
-    top: auto;
   }
   .tablet\:top-\[50\%\] {
     top: 50%;
@@ -6744,6 +6695,9 @@ video {
   }
   .tablet\:top-\[-225px\] {
     top: -225px;
+  }
+  .tablet\:top-auto {
+    top: auto;
   }
   .tablet\:bottom-\[-23px\] {
     bottom: -23px;
@@ -7062,9 +7016,6 @@ video {
   .tablet\:hidden {
     display: none;
   }
-  .tablet\:h-\[100px\] {
-    height: 100px;
-  }
   .tablet\:h-auto {
     height: auto;
   }
@@ -7119,11 +7070,11 @@ video {
   .tablet\:min-h-\[214\.59px\] {
     min-height: 214.59px;
   }
-  .tablet\:w-\[100px\] {
-    width: 100px;
-  }
   .tablet\:w-auto {
     width: auto;
+  }
+  .tablet\:w-\[100px\] {
+    width: 100px;
   }
   .tablet\:w-\[500px\] {
     width: 500px;
@@ -7939,9 +7890,6 @@ video {
   .laptop\:bottom-\[-6\%\] {
     bottom: -6%;
   }
-  .laptop\:bottom-\[-16\%\] {
-    bottom: -16%;
-  }
   .laptop\:right-\[-120px\] {
     right: -120px;
   }
@@ -8458,9 +8406,6 @@ video {
   }
   .laptop\:w-\[50\%\] {
     width: 50%;
-  }
-  .laptop\:w-\[227px\] {
-    width: 227px;
   }
   .laptop\:w-\[470px\] {
     width: 470px;
@@ -9197,9 +9142,6 @@ video {
   .desktop\:top-\[-50px\] {
     top: -50px;
   }
-  .desktop\:bottom-\[-70px\] {
-    bottom: -70px;
-  }
   .desktop\:bottom-\[-40px\] {
     bottom: -40px;
   }
@@ -9669,9 +9611,6 @@ video {
   }
   .desktop\:w-\[138px\] {
     width: 138px;
-  }
-  .desktop\:w-\[373px\] {
-    width: 373px;
   }
   .desktop\:w-\[730px\] {
     width: 730px;
@@ -10539,6 +10478,10 @@ video {
 .nav-btn.dark:hover {
   background-color: var(--emerald-500);
 }
+.nav-btn.dark-active {
+  background-color: var(--emerald-500);
+  color: var(--sage-50);
+}
 .nav-btn.dark-popup {
   border-color: var(--tangerine-400);
   background-color: var(--tangerine-400);
@@ -10589,17 +10532,29 @@ video {
   -moz-transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -moz-text-decoration-color, -moz-transform;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-text-decoration-color, -moz-text-decoration-color, -webkit-transform, -moz-transform, -o-transform, -webkit-filter, -webkit-backdrop-filter;
-  -webkit-transition-duration: 150ms;
-     -moz-transition-duration: 150ms;
-       -o-transition-duration: 150ms;
-          transition-duration: 150ms;
+  -webkit-transition-duration: 300ms;
+     -moz-transition-duration: 300ms;
+       -o-transition-duration: 300ms;
+          transition-duration: 300ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
      -moz-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
        -o-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .group:hover .chevron-down-icon-nav {
-  fill: var(--sage-700);
+  fill: var(--sage-50);
+}
+.aboutSvg-icon {
+  fill: currentColor;
+}
+.group:hover .aboutSvg-icon {
+  fill: var(--tangerine-800);
+}
+.aboutSvg-icon-bg {
+  fill: transparent;
+}
+.group:hover .aboutSvg-icon-bg {
+  fill: var(--tangerine-300);
 }
 .lazy-load-image-background.blur {
   -webkit-filter: blur(15px);
