--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1864,6 +1864,12 @@ video {
 .left-\[-120px\] {
   left: -120px;
 }
+.top-\[360px\] {
+  top: 360px;
+}
+.left-\[20px\] {
+  left: 20px;
+}
 .z-2 {
   z-index: 2;
 }
@@ -2301,6 +2307,21 @@ video {
 .mt-\[3px\] {
   margin-top: 3px;
 }
+.mt-36 {
+  margin-top: 9rem;
+}
+.mt-28 {
+  margin-top: 7rem;
+}
+.mt-64 {
+  margin-top: 16rem;
+}
+.mt-52 {
+  margin-top: 13rem;
+}
+.mt-72 {
+  margin-top: 18rem;
+}
 .block {
   display: block;
 }
@@ -2703,6 +2724,12 @@ video {
 .w-\[66px\] {
   width: 66px;
 }
+.w-\[1200px\] {
+  width: 1200px;
+}
+.w-\[610px\] {
+  width: 610px;
+}
 .min-w-\[320px\] {
   min-width: 320px;
 }
@@ -2954,6 +2981,9 @@ video {
 }
 .max-w-\[220px\] {
   max-width: 220px;
+}
+.max-w-\[566px\] {
+  max-width: 566px;
 }
 .flex-1 {
   -webkit-box-flex: 1;
@@ -4597,6 +4627,9 @@ video {
 .pt-\[40px\] {
   padding-top: 40px;
 }
+.pb-28 {
+  padding-bottom: 7rem;
+}
 .text-left {
   text-align: left;
 }
@@ -5017,6 +5050,9 @@ video {
   --tw-text-opacity: 1;
   color: rgb(30 41 59 / var(--tw-text-opacity));
 }
+.text-tangerine-800 {
+  color: var(--tangerine-800);
+}
 .text-\[\#6e6d7a\] {
   --tw-text-opacity: 1;
   color: rgb(110 109 122 / var(--tw-text-opacity));
@@ -5040,11 +5076,8 @@ video {
   --tw-text-opacity: 1;
   color: rgb(60 38 38 / var(--tw-text-opacity));
 }
-.text-tangerine-800 {
-  color: var(--tangerine-800);
-}
-.text-opacity-70 {
-  --tw-text-opacity: 0.7;
+.text-tangerine-50 {
+  color: var(--tangerine-50);
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -5781,6 +5814,12 @@ video {
 .last\:mb-0:last-child {
   margin-bottom: 0px;
 }
+.odd\:mb-4:nth-child(odd) {
+  margin-bottom: 1rem;
+}
+.even\:mb-4:nth-child(even) {
+  margin-bottom: 1rem;
+}
 .checked\:border-emerald-400:checked {
   border-color: var(--emerald-400);
 }
@@ -6391,23 +6430,8 @@ video {
 .group:hover .group-hover\:bg-emerald-500 {
   background-color: var(--emerald-500);
 }
-.group:hover .group-hover\:bg-sage-200 {
-  background-color: var(--sage-200);
-}
-.group:hover .group-hover\:bg-warning-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 243 199 / var(--tw-bg-opacity));
-}
-.group:hover .group-hover\:bg-navy-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(221 226 236 / var(--tw-bg-opacity));
-}
 .group:hover .group-hover\:bg-tangerine-300 {
   background-color: var(--tangerine-300);
-}
-.group:hover .group-hover\:bg-success-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(217 229 229 / var(--tw-bg-opacity));
 }
 .group:hover .group-hover\:fill-tangerine-50 {
   fill: var(--tangerine-50);
@@ -6714,6 +6738,18 @@ video {
   .tablet\:top-\[-40px\] {
     top: -40px;
   }
+  .tablet\:top-\[100px\] {
+    top: 100px;
+  }
+  .tablet\:left-\[30px\] {
+    left: 30px;
+  }
+  .tablet\:top-\[140px\] {
+    top: 140px;
+  }
+  .tablet\:left-\[70px\] {
+    left: 70px;
+  }
   .tablet\:z-20 {
     z-index: 20;
   }
@@ -7003,8 +7039,20 @@ video {
   .tablet\:mt-2 {
     margin-top: 0.5rem;
   }
+  .tablet\:mr-12 {
+    margin-right: 3rem;
+  }
+  .tablet\:mr-24 {
+    margin-right: 6rem;
+  }
+  .tablet\:mr-28 {
+    margin-right: 7rem;
+  }
   .tablet\:block {
     display: block;
+  }
+  .tablet\:inline-block {
+    display: inline-block;
   }
   .tablet\:flex {
     display: -webkit-box;
@@ -7244,6 +7292,12 @@ video {
   .tablet\:max-w-\[740px\] {
     max-width: 740px;
   }
+  .tablet\:max-w-\[390px\] {
+    max-width: 390px;
+  }
+  .tablet\:max-w-\[566px\] {
+    max-width: 566px;
+  }
   .tablet\:flex-\[0_1_auto\] {
     -webkit-box-flex: 0;
     -webkit-flex: 0 1 auto;
@@ -7466,6 +7520,12 @@ video {
   .tablet\:grid-rows-\[minmax\(auto\2c 60px\)_auto_auto_auto_auto\] {
     grid-template-rows: minmax(auto,60px) auto auto auto auto;
   }
+  .tablet\:grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
+  }
+  .tablet\:grid-rows-\[auto_auto_auto_1fr\] {
+    grid-template-rows: auto auto auto 1fr;
+  }
   .tablet\:flex-row {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -7600,6 +7660,12 @@ video {
     -webkit-column-gap: 1rem;
        -moz-column-gap: 1rem;
             column-gap: 1rem;
+  }
+  .tablet\:gap-y-6 {
+    row-gap: 1.5rem;
+  }
+  .tablet\:gap-y-0 {
+    row-gap: 0px;
   }
   .tablet\:self-end {
     -webkit-align-self: flex-end;
@@ -8067,6 +8133,15 @@ video {
   .laptop\:top-\[40px\] {
     top: 40px;
   }
+  .laptop\:top-\[140px\] {
+    top: 140px;
+  }
+  .laptop\:top-\[-20px\] {
+    top: -20px;
+  }
+  .laptop\:left-\[30px\] {
+    left: 30px;
+  }
   .laptop\:z-2 {
     z-index: 2;
   }
@@ -8340,6 +8415,18 @@ video {
   .laptop\:ml-\[50px\] {
     margin-left: 50px;
   }
+  .laptop\:mr-36 {
+    margin-right: 9rem;
+  }
+  .laptop\:mr-44 {
+    margin-right: 11rem;
+  }
+  .laptop\:mr-48 {
+    margin-right: 12rem;
+  }
+  .laptop\:mt-44 {
+    margin-top: 11rem;
+  }
   .laptop\:block {
     display: block;
   }
@@ -8457,6 +8544,9 @@ video {
   }
   .laptop\:w-\[60px\] {
     width: 60px;
+  }
+  .laptop\:w-\[900px\] {
+    width: 900px;
   }
   .laptop\:min-w-\[1009px\] {
     min-width: 1009px;
@@ -8983,6 +9073,9 @@ video {
   }
   .laptop\:pb-14 {
     padding-bottom: 3.5rem;
+  }
+  .laptop\:pb-20 {
+    padding-bottom: 5rem;
   }
   .laptop\:text-left {
     text-align: left;
@@ -9557,6 +9650,9 @@ video {
   .desktop\:ml-3 {
     margin-left: 0.75rem;
   }
+  .desktop\:mt-8 {
+    margin-top: 2rem;
+  }
   .desktop\:block {
     display: block;
   }
@@ -9770,6 +9866,12 @@ video {
   }
   .desktop\:max-w-\[475px\] {
     max-width: 475px;
+  }
+  .desktop\:max-w-\[590px\] {
+    max-width: 590px;
+  }
+  .desktop\:max-w-\[790px\] {
+    max-width: 790px;
   }
   .desktop\:flex-none {
     -webkit-box-flex: 0;
@@ -10106,6 +10208,18 @@ video {
   .desktopXl\:top-\[100px\] {
     top: 100px;
   }
+  .desktopXl\:top-0 {
+    top: 0px;
+  }
+  .desktopXl\:top-\[50px\] {
+    top: 50px;
+  }
+  .desktopXl\:top-\[-100px\] {
+    top: -100px;
+  }
+  .desktopXl\:top-\[120px\] {
+    top: 120px;
+  }
   .desktopXl\:col-span-7 {
     grid-column: span 7 / span 7;
   }
@@ -10123,6 +10237,9 @@ video {
   }
   .desktopXl\:col-span-8 {
     grid-column: span 8 / span 8;
+  }
+  .desktopXl\:col-span-6 {
+    grid-column: span 6 / span 6;
   }
   .desktopXl\:col-start-7 {
     grid-column-start: 7;
@@ -10185,6 +10302,12 @@ video {
   .desktopXl\:mr-\[40\%\] {
     margin-right: 40%;
   }
+  .desktopXl\:mt-56 {
+    margin-top: 14rem;
+  }
+  .desktopXl\:mt-8 {
+    margin-top: 2rem;
+  }
   .desktopXl\:h-\[500px\] {
     height: 500px;
   }
@@ -10200,8 +10323,20 @@ video {
   .desktopXl\:w-\[1020px\] {
     width: 1020px;
   }
+  .desktopXl\:w-\[1290px\] {
+    width: 1290px;
+  }
   .desktopXl\:max-w-\[1180px\] {
     max-width: 1180px;
+  }
+  .desktopXl\:max-w-\[890px\] {
+    max-width: 890px;
+  }
+  .desktopXl\:max-w-\[1020px\] {
+    max-width: 1020px;
+  }
+  .desktopXl\:max-w-\[1290px\] {
+    max-width: 1290px;
   }
   .desktopXl\:grid-rows-\[minmax\(70px\2c auto\)_auto_1fr_minmax\(70px\2c auto\)\] {
     grid-template-rows: minmax(70px,auto) auto 1fr minmax(70px,auto);
@@ -10219,6 +10354,15 @@ video {
   .desktopXl\:pr-24 {
     padding-right: 6rem;
   }
+  .desktopXl\:pb-20 {
+    padding-bottom: 5rem;
+  }
+  .desktopXl\:pb-36 {
+    padding-bottom: 9rem;
+  }
+  .desktopXl\:pb-28 {
+    padding-bottom: 7rem;
+  }
   .desktopXl\:text-left {
     text-align: left;
   }
@@ -10229,6 +10373,10 @@ video {
   .desktopXl\:text-\[80px\] {
     font-size: 80px;
   }
+  .desktopXl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 2rem;
+  }
 }
 @media (min-width: 1880px) {
   .desktopMax\:top-\[-6\%\] {
@@ -10236,6 +10384,27 @@ video {
   }
   .desktopMax\:right-\[-365px\] {
     right: -365px;
+  }
+}
+.\[\&\>p\]\:mb-4>p {
+  margin-bottom: 1rem;
+}
+.\[\&\>p\]\:mb-6>p {
+  margin-bottom: 1.5rem;
+}
+@media (min-width: 768px) {
+  .tablet\:\[\&\>p\]\:mb-4>p {
+    margin-bottom: 1rem;
+  }
+  .tablet\:\[\&\>p\]\:mb-6>p {
+    margin-bottom: 1.5rem;
+  }
+  .tablet\:\[\&\>p\]\:flex-\[1_0_47\%\]>p {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 47%;
+       -moz-box-flex: 1;
+        -ms-flex: 1 0 47%;
+            flex: 1 0 47%;
   }
 }
 .blog-content a {
