moved pattern maker to its own folder and added animations

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1360,11 +1360,14 @@ video {
   top: 0px;
   bottom: 0px;
 }
-.bottom-0 {
-  bottom: 0px;
+.top-0 {
+  top: 0px;
 }
 .left-0 {
   left: 0px;
+}
+.bottom-0 {
+  bottom: 0px;
 }
 .top-\[-100px\] {
   top: -100px;
@@ -1431,9 +1434,6 @@ video {
 }
 .left-\[75px\] {
   left: 75px;
-}
-.top-0 {
-  top: 0px;
 }
 .top-1\/2 {
   top: 50%;
@@ -1872,6 +1872,9 @@ video {
 }
 .left-\[-120px\] {
   left: -120px;
+}
+.top-auto {
+  top: auto;
 }
 .z-2 {
   z-index: 2;
@@ -2341,11 +2344,11 @@ video {
 .grid {
   display: grid;
 }
-.contents {
-  display: contents;
-}
 .hidden {
   display: none;
+}
+.h-full {
+  height: 100%;
 }
 .h-14 {
   height: 3.5rem;
@@ -2370,9 +2373,6 @@ video {
 }
 .h-\[200px\] {
   height: 200px;
-}
-.h-full {
-  height: 100%;
 }
 .h-\[20px\] {
   height: 20px;
@@ -2454,6 +2454,9 @@ video {
 }
 .h-\[94px\] {
   height: 94px;
+}
+.h-\[130px\] {
+  height: 130px;
 }
 .max-h-60 {
   max-height: 15rem;
@@ -2731,6 +2734,9 @@ video {
 }
 .w-\[66px\] {
   width: 66px;
+}
+.w-\[300\] {
+  width: 300;
 }
 .min-w-\[320px\] {
   min-width: 320px;
@@ -3188,6 +3194,22 @@ video {
 }
 .-translate-x-3 {
   --tw-translate-x: -0.75rem;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+     -moz-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+      -ms-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+       -o-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-x-\[100px\] {
+  --tw-translate-x: 100px;
+  -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+     -moz-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+      -ms-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+       -o-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+          transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-\[100px\] {
+  --tw-translate-y: 100px;
   -webkit-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
      -moz-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
       -ms-transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -4001,6 +4023,14 @@ video {
 .\!border-tangerine-100 {
   border-color: var(--tangerine-100) !important;
 }
+.\!bg-red-800 {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity)) !important;
+}
+.bg-\[\#deebff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(222 235 255 / var(--tw-bg-opacity));
+}
 .bg-primary-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(240 227 220 / var(--tw-bg-opacity));
@@ -4265,6 +4295,10 @@ video {
 .bg-success-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(79 113 113 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-contain {
   background-size: contain;
@@ -4816,6 +4850,14 @@ video {
 .tracking-wide {
   letter-spacing: 0.025em;
 }
+.text-red-700 {
+  --tw-text-opacity: 1;
+  color: rgb(185 28 28 / var(--tw-text-opacity));
+}
+.text-grey-600 {
+  --tw-text-opacity: 1;
+  color: rgb(77 85 97 / var(--tw-text-opacity));
+}
 .text-\[\#3E3E3E\] {
   --tw-text-opacity: 1;
   color: rgb(62 62 62 / var(--tw-text-opacity));
@@ -4823,10 +4865,6 @@ video {
 .text-neutral-900 {
   --tw-text-opacity: 1;
   color: rgb(21 18 19 / var(--tw-text-opacity));
-}
-.text-grey-600 {
-  --tw-text-opacity: 1;
-  color: rgb(77 85 97 / var(--tw-text-opacity));
 }
 .text-tangerine-700 {
   color: var(--tangerine-700);
@@ -5077,10 +5115,6 @@ video {
   --tw-text-opacity: 1;
   color: rgb(60 38 38 / var(--tw-text-opacity));
 }
-.text-red-700 {
-  --tw-text-opacity: 1;
-  color: rgb(185 28 28 / var(--tw-text-opacity));
-}
 .underline {
   -webkit-text-decoration-line: underline;
      -moz-text-decoration-line: underline;
@@ -5097,11 +5131,11 @@ video {
 .opacity-70 {
   opacity: 0.7;
 }
-.opacity-100 {
-  opacity: 1;
-}
 .opacity-0 {
   opacity: 0;
+}
+.opacity-100 {
+  opacity: 1;
 }
 .opacity-25 {
   opacity: 0.25;
@@ -5393,17 +5427,41 @@ video {
        -o-transition-delay: 500ms;
           transition-delay: 500ms;
 }
-.duration-200 {
-  -webkit-transition-duration: 200ms;
-     -moz-transition-duration: 200ms;
-       -o-transition-duration: 200ms;
-          transition-duration: 200ms;
+.delay-100 {
+  -webkit-transition-delay: 100ms;
+     -moz-transition-delay: 100ms;
+       -o-transition-delay: 100ms;
+          transition-delay: 100ms;
+}
+.delay-1000 {
+  -webkit-transition-delay: 1000ms;
+     -moz-transition-delay: 1000ms;
+       -o-transition-delay: 1000ms;
+          transition-delay: 1000ms;
+}
+.delay-700 {
+  -webkit-transition-delay: 700ms;
+     -moz-transition-delay: 700ms;
+       -o-transition-delay: 700ms;
+          transition-delay: 700ms;
 }
 .duration-300 {
   -webkit-transition-duration: 300ms;
      -moz-transition-duration: 300ms;
        -o-transition-duration: 300ms;
           transition-duration: 300ms;
+}
+.duration-150 {
+  -webkit-transition-duration: 150ms;
+     -moz-transition-duration: 150ms;
+       -o-transition-duration: 150ms;
+          transition-duration: 150ms;
+}
+.duration-200 {
+  -webkit-transition-duration: 200ms;
+     -moz-transition-duration: 200ms;
+       -o-transition-duration: 200ms;
+          transition-duration: 200ms;
 }
 .duration-500 {
   -webkit-transition-duration: 500ms;
@@ -5417,23 +5475,11 @@ video {
        -o-transition-duration: 600ms;
           transition-duration: 600ms;
 }
-.duration-150 {
-  -webkit-transition-duration: 150ms;
-     -moz-transition-duration: 150ms;
-       -o-transition-duration: 150ms;
-          transition-duration: 150ms;
-}
 .duration-100 {
   -webkit-transition-duration: 100ms;
      -moz-transition-duration: 100ms;
        -o-transition-duration: 100ms;
           transition-duration: 100ms;
-}
-.duration-75 {
-  -webkit-transition-duration: 75ms;
-     -moz-transition-duration: 75ms;
-       -o-transition-duration: 75ms;
-          transition-duration: 75ms;
 }
 .ease-in-out {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -5452,12 +5498,6 @@ video {
      -moz-transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
        -o-transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-.ease-linear {
-  -webkit-transition-timing-function: linear;
-     -moz-transition-timing-function: linear;
-       -o-transition-timing-function: linear;
-          transition-timing-function: linear;
 }
 .will-change-auto {
   will-change: auto;
@@ -5754,6 +5794,11 @@ video {
 .before\:w-full::before {
   content: var(--tw-content);
   width: 100%;
+}
+.before\:bg-red-100::before {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
 .before\:bg-white::before {
   content: var(--tw-content);
